--- a/src/main/webapp/static/styles/default.css
+++ b/src/main/webapp/static/styles/default.css
@@ -3,12 +3,15 @@
  * --------------------------------- */
 *{ font-family: 'Gothic A1', sans-serif; color:#2E2E2E; box-sizing: border-box;}
 a{text-decoration:none;color:#2E2E2E;}
-hr{border:1px dotted #E6E6E6;width:90%;}
+hr{border:1px dotted #E6E6E6;width:98%;}
 
 /* ---------------------------------
  *        body style
  * --------------------------------- */
  body{background:#f7f7f7;}
+ 
+ 
+ 
 
 /* ---------------------------------
  *        input, button style
@@ -30,3 +33,92 @@ h5{font-size: 1em}
 
 
 
+/* ---------------------------------
+ *        header style
+ * --------------------------------- */
+.header{position:absolute;left:0;top:0; width:100%;background:white;transition:all 0.5s;box-shadow: 0 4px 10px rgba(0,0,0,0.05), 0 0 1px rgba(0,0,0,0.1);}
+
+
+
+
+/* ---------------------------------
+ *        navigation style
+ * --------------------------------- */
+.nav{display:flex;justify-content:space-between;align-items:center;height:60px;position:relative;}
+.nav .logo{display:flex;justify-content:center;align-items:center;width:auto;height:100%;margin-left:20px;}
+.nav .logo a{font-size:25px;} 
+.nav .menu{display:flex;height:100%;}
+.nav .menu .menu-item{height:100%;}
+.nav .menu .menu-item a{display:flex;flex-direction:column;justify-content:center;align-items:center;width:100px;height:100%;}
+.nav .menu .menu-item a .icon-wrap i{font-size:25px;transition:all 0.3s;color:#6E6E6E;}
+.nav .menu .menu-item a .text-wrap{font-size:12px;color:#424242;}
+.nav .menu .menu-item a:hover .icon-wrap i{font-size:27px;color:#1877f2;} 
+.nav .menu .menu-item a:hover .text-wrap{color:#1877f2;}
+
+.nav .menu .menu-item .menu-profile-wrap{display:flex;justify-content:center;align-items:center;width:100%;height:100%;}  
+.nav .menu .menu-item .menu-profile-wrap .img-wrap{width:32px;height:32px;border-radius:100%;overflow:hidden;margin-right:5px;transition:all 0.5s;}
+.nav .menu .menu-item .menu-profile-wrap .img-wrap img{width:100%;height:100%;}
+.nav .menu .menu-item .menu-profile-wrap .text-wrap{font-weight:bold;}
+.nav .menu .menu-item .menu-profile-wrap:hover .text-wrap{color:#1877f2;}
+
+.login-menu{margin-right:20px;cursor:pointer;position:relative;}
+.login-menu .menu-item .menu-profile-dropbox{display:none; position:absolute;right:0;top:80%; background:white;width:200px;box-shadow:0 4px 10px rgba(0,0,0,0.05), 0 0 1px rgba(0,0,0,0.1);
+border-radius:10px;} 
+.login-menu .menu-item .menu-profile-dropbox .dropbox-item{display:flex;justify-content:center;align-items:center;width:100%;padding:5px;}
+.login-menu .menu-item .menu-profile-dropbox .dropbox-item i{font-size:25px;color:#6E6E6E;margin-bottom:5px;transition:all 0.3s;}
+.login-menu .menu-item .menu-profile-dropbox .dropbox-item span{font-size:16px;color:#424242;}
+.login-menu .menu-item .menu-profile-dropbox .dropbox-item:hover i{font-size:27px;color:#1877f2;} 
+.login-menu .menu-item .menu-profile-dropbox .dropbox-item:hover span{color:#1877f2;}
+
+
+
+
+/* ---------------------------------
+ *        content-wrap style
+ * --------------------------------- */
+.section{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;width:100%;margin-top:110px;}
+
+
+
+
+
+/* ---------------------------------
+ *        form style
+ * --------------------------------- */
+ .form{display:flex;flex-direction:column;width:450px;border-radius:10px;background:white;box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);padding:20px 12px;}
+ .form .form-input-wrap{display:flex;flex-direction:column;width:100%;margin-bottom:10px;}
+ .form .form-input-wrap label{margin-bottom:5px;}
+ .form .form-input-wrap input{width:100%;padding:15px 15px;border-radius:5px;border:1px solid #D8D8D8;}
+ .form .form-checkbox-wrap{display:flex;justify-content:flex-start;align-items:center;width:100%;margin-bottom:20px;}
+ .form button{border:none;padding:15px 5px;background:#1877f2;border-radius:5px;color:white;font-size:16px;font-weight:bold;}
+ .form .form-info-text{color:#1877f2;font-weight:bold;}
+ .form .message-span{display:none;color:#FA5858;padding:15px;background:#F6CECE;}
+ 
+ 
+ 
+
+/* ---------------------------------
+ *        태블릿 화면
+ * --------------------------------- */
+@media (min-width:768px) and (max-width:1023px){
+	.header{height:120px;}
+	.nav{flex-wrap:wrap;justify-content:center;}
+	.nav .logo{width:100%;}
+	
+	.section{margin-top:170px;}
+}
+
+/* ---------------------------------
+ *        모바일 화면
+ * --------------------------------- */
+@media screen and (max-width:767px){ 
+	.header{height:120px;}
+	.nav{flex-wrap:wrap;justify-content:center;}
+	.nav .logo{width:90%;justify-content:flex-start;} 
+	.nav .main-menu{display:flex;justify-content:center;width:100%;}
+	.nav .main-menu .menu-item{flex:1;display:flex;justify-content:center;}
+	.nav .logout-menu{position:absolute;top:0px;right:0px;}
+	.nav .login-menu{position:absolute;top:0px;right:0px;}
+	
+	.section{margin-top:170px;}
+}
