--- a/src/main/webapp/static/styles/default.css
+++ b/src/main/webapp/static/styles/default.css
@@ -2,7 +2,7 @@
  *        font default style
  * --------------------------------- */
 *{ font-family: 'Gothic A1', sans-serif; color:#2E2E2E; box-sizing: border-box;}
-a{text-decoration:none;color:#2E2E2E;}
+a{text-decoration:none;color:#2E2E2E; cursor:pointer;}
 hr{border:1px dotted #E6E6E6;width:98%;}
 strong{font-weight: bold;}
 i{font-style:italic;}
@@ -109,6 +109,18 @@ border-radius:10px;}
  *        ck editor
  * --------------------------------- */
 .ck-editor__editable_inline {min-height: 500px;}
+
+ /* ---------------------------------
+ *        table css
+ * --------------------------------- */
+table {
+  width: 100%;
+  border: 1px solid #444444;
+  border-collapse: collapse;
+}
+th, td {
+  border: 1px solid #444444;
+}
  
 
 /* ---------------------------------
